<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/store_k"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shop_item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9dp"
        android:src="@mipmap/store_pic01" />

    <com.vxiaoxue.weiketang.ui.font.TextViewMagic
        android:id="@+id/shop_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:text="@string/shop_prop_name"
        android:textColor="@color/appBlack"
        android:textSize="14sp"
        app:typeFace="ttf.TTF" />

    <com.vxiaoxue.weiketang.ui.font.TextViewMagic
        android:id="@+id/shop_item_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shop_prop_des"
        android:textColor="@color/appBlack"
        android:textSize="11sp"
        app:typeFace="ttf.TTF" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/store_buy">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="19dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/store_money" />

            <com.vxiaoxue.weiketang.ui.font.TextViewMagic
                android:id="@+id/shop_item_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_money"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:typeFace="shop.TTF" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>